<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#77C7EC">

        <TextView
            android:id="@+id/temp"
            android:layout_width="120dp"
            android:layout_height="125dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            tools:text="36 c"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtdescription"
            android:layout_width="120dp"
            android:layout_height="62dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/temp"
            app:layout_constraintTop_toBottomOf="@+id/temp" />

        <ImageView
            android:id="@+id/imageicon"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtdescription" />

        <ImageView
            android:id="@+id/cloudimage"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cloud"
            app:tint="#FF69B4" />

        <TextView
            android:id="@+id/txtcloud"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/cloud"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/cloudimage"
            app:layout_constraintStart_toStartOf="@+id/cloudimage"
            app:layout_constraintTop_toBottomOf="@+id/cloudimage" />

        <TextView
            android:id="@+id/cloud"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="75%"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtcloud"
            app:layout_constraintStart_toStartOf="@+id/txtcloud"
            app:layout_constraintTop_toBottomOf="@+id/txtcloud" />

        <ImageView
            android:id="@+id/humidityimage"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:tint="#FFC107"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloud"
            app:srcCompat="@drawable/humidity" />

        <TextView
            android:id="@+id/txthumidity"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/humidity"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/humidityimage"
            app:layout_constraintStart_toStartOf="@+id/humidityimage"
            app:layout_constraintTop_toBottomOf="@+id/humidityimage" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            tools:text="100"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txthumidity"
            app:layout_constraintStart_toStartOf="@+id/txthumidity"
            app:layout_constraintTop_toBottomOf="@+id/txthumidity" />

        <ImageView
            android:id="@+id/ultraimage"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/humidity"
            app:srcCompat="@drawable/sun"
            app:tint="#3F51B5" />

        <TextView
            android:id="@+id/txtultra"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/ultra_voilt"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/ultraimage"
            app:layout_constraintStart_toStartOf="@+id/ultraimage"
            app:layout_constraintTop_toBottomOf="@+id/ultraimage" />

        <TextView
            android:id="@+id/ultra"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:text="100"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtultra"
            app:layout_constraintStart_toStartOf="@+id/txtultra"
            app:layout_constraintTop_toBottomOf="@+id/txtultra" />

        <ImageView
            android:id="@+id/visibilityimage"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/visibility"
            app:tint="#2196F3" />

        <TextView
            android:id="@+id/txtvisibility"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/visibility"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/visibilityimage"
            app:layout_constraintStart_toStartOf="@+id/visibilityimage"
            app:layout_constraintTop_toBottomOf="@+id/visibilityimage" />

        <TextView
            android:id="@+id/visibility"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="100"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtvisibility"
            app:layout_constraintStart_toStartOf="@+id/txtvisibility"
            app:layout_constraintTop_toBottomOf="@+id/txtvisibility" />

        <ImageView
            android:id="@+id/pressureimage"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/visibility"
            app:srcCompat="@drawable/gauge"
            app:tint="#3F51B5" />

        <TextView
            android:id="@+id/txtpressure"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/pressure"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/pressureimage"
            app:layout_constraintStart_toStartOf="@+id/pressureimage"
            app:layout_constraintTop_toBottomOf="@+id/pressureimage" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            tools:text="100"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtpressure"
            app:layout_constraintStart_toStartOf="@+id/txtpressure"
            app:layout_constraintTop_toBottomOf="@+id/txtpressure" />

        <ImageView
            android:id="@+id/windimage"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pressure"
            app:srcCompat="@drawable/wind"
            app:tint="#FF9800" />

        <TextView
            android:id="@+id/txtwind"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="@string/wind"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/windimage"
            app:layout_constraintStart_toStartOf="@+id/windimage"
            app:layout_constraintTop_toBottomOf="@+id/windimage" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:gravity="center"
            tools:text="100"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtwind"
            app:layout_constraintStart_toStartOf="@+id/txtwind"
            app:layout_constraintTop_toBottomOf="@+id/txtwind" />
    </androidx.constraintlayout.widget.ConstraintLayout>
<!--</androidx.cardview.widget.CardView>-->